--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,11 @@
   --ifm-color-primary-lightest: #febf37;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --fp-text-primary: #2C2C2C;
+  --fp-text-secondary: #2C2C2C;
+  --fp-dec: #EBEBEB;
+  --fp-border: #E0DEDE;
+  --fp-accent: #EE521C;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,6 +32,46 @@
   --ifm-color-primary-lighter: #fcb44f;
   --ifm-color-primary-lightest: #fcd14f;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --fp-text-primary: #e3e3e3;
+  --fp-text-secondary: rgba(255, 255, 255, 0.5);
+  --fp-dec: #232325;
+  --fp-border: #302F30;
+  --fp-accent: #FF7119;
+}
+
+body {
+  background-color: var(--fp-background);
+}
+
+.nav-action-button {
+  order: 1;
+  color: #FFFFFF;
+  background: #2C2C2C;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 22px;
+  margin-left: 16px;
+  font-weight: 550;
+  padding: 8px 32px;
+}
+
+.nav-action-button.menu__link {
+  justify-content: center;
+  margin-left: 12px;
+  margin-top: 20px;
+}
+
+.nav-action-button:hover {
+  background: #cfcdcd;
+  color: var(--fp-primary);
+}
+
+[data-theme='dark'] .nav-action-button {
+  background: #444444;
+}
+
+[data-theme='dark'] .nav-action-button:hover {
+  color: var(--fp-accent);
 }
 
 .fireproof {
