--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -74,6 +74,7 @@ body {
   color: var(--fp-accent);
 }
 
+/*
 .fireproof {
   background: linear-gradient(-45deg, #000000, #ff6f00, #ffa000, #000, #ff8200);
   background-size: 400% 400%;
@@ -94,4 +95,4 @@ body {
     background-position: 0% 50%;
     background-rotate: 270deg;
   }
-}
+}\*/
